[tool.poetry]
name = "binance"
version = "0.1.0"
description = "Tool for interacting with binance"
authors = ["Konstantin Zakharov <kszakharov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
click = "^8.1.3"
prettytable = "^3.3.0"
pydantic = "^1.9.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
